--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,7 @@
 <div class="home">
     <h1 class="logo">KiraaYogaa</h1>
     <a href="https://www.instagram.com/kiraayogaa"><img src={{igLogo}} height="100px" /></a>
+    <a href="https://www.tiktok.com/@kiraayogaa"><img src={{tiktokLogo}} height="100px" /></a>
     <app-navbar></app-navbar>
     <div class="home-container">
       <img src={{home1}} height="600px" class="main-pic" />
