--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,15 @@
 <div class="home">
-    <h1 class="logo">KiraaYogaa</h1>
-    <a href="https://www.instagram.com/kiraayogaa"><img src={{igLogo}} height="100px" /></a>
-    <a href="https://www.tiktok.com/@kiraayogaa"><img src={{tiktokLogo}} height="100px" /></a>
+    <div>
+      <img src="./../assets/logo.png" height="200px">
+    </div>
+    <a href="https://www.instagram.com/kiraayogaa"><img src={{igLogo}} height="50px" /></a>
+    <a href="https://www.tiktok.com/@kiraayogaa"><img src={{tiktokLogo}} height="50px" /></a>
     <app-navbar></app-navbar>
     <div class="home-container">
-      <img src={{home1}} height="600px" class="main-pic" />
+      <img src={{home1}} height="540px" class="main-pic" />
       <div class="middle-col">
         <p>&nbsp;{{textContent.intro}}</p>
-        <p>&nbsp;{{textContent.intro}}</p>
+        <p>&nbsp;{{textContent.intro2}}</p>
       </div>
       <div class="right-col">
         <iframe width="500" height="282" src="https://www.youtube.com/embed/phuS5VLQy8c" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
