--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,9 +1,9 @@
 <nav>
     <ul>
-        <li><a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">Home</a></li>
+        <li *ngIf="router.url !== '/home'"><a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">Home</a></li>
     <!--    <li><a routerLink="/faq" routerLinkActive="active" ariaCurrentWhenActive="page">FAQ</a></li> -->
-        <li><a routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">About Me</a></li>
         <li><a routerLink="/group-classes" routerLinkActive="active" ariaCurrentWhenActive="page">Group Classes</a></li>
+        <li><a routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">About Me</a></li>
     <!--    <li><a routerLink="/private-classes" routerLinkActive="active" ariaCurrentWhenActive="page">Custom Private Classes</a></li> -->
     <!--    <li><a routerLink="/videos" routerLinkActive="active" ariaCurrentWhenActive="page">Videos</a></li> -->
         <li><a routerLink="/contact" routerLinkActive="active" ariaCurrentWhenActive="page">Contact</a></li>
