--- a/src/app/group-classes/group-classes.component.css
+++ b/src/app/group-classes/group-classes.component.css
@@ -79,13 +79,15 @@ input[type='radio']:checked:after {
     border: 1px solid black;
 }
 
-button {
+.button {
     background-color: #B4C4AB;
     padding: 10px;
+    margin: 10px;
     transition: all 100ms ease-in-out;
+    border: 1px solid black;
 }
 
-button:hover {
+.button:hover {
     background-color: #d6e9cc;
     cursor: pointer;
 }
@@ -103,4 +105,10 @@ button:hover {
 
 .right {
     flex-grow: 2;
+}
+
+.review {
+    text-align: left;
+    margin: 0 20%;
+    white-space: pre-line;
 }
