--- a/src/app/group-classes/group-classes.component.css
+++ b/src/app/group-classes/group-classes.component.css
@@ -15,7 +15,7 @@
 }
 
 .descriptions {
-    background-image: url("../../assets/private-classes-bg.png");
+    background-image: url("~src/assets/private-classes-bg.png");
     background-size: cover;
     width: 40%;
     min-height: calc(100vh - 50px);
@@ -111,4 +111,15 @@ input[type='radio']:checked:after {
     text-align: left;
     margin: 0 20%;
     white-space: pre-line;
+}
+
+@media screen and (max-width: 800px) {
+    .descriptions {
+        display: none;
+    }
+
+    .form {
+        flex-direction: column;
+        align-items: center;
+    }
 }
