--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -19,3 +19,22 @@
     align-items: center;
     z-index: -1;
 }
+
+@media screen and (max-width: 800px) {
+    .home {
+        padding: 0 20px;
+    }
+
+    .home-container {
+        flex-direction: column;
+    }
+
+    .video {
+        width: 100%;
+        height: 50vw;
+    }
+
+    .main-pic {
+        height: auto;
+    }
+}
