--- a/src/app/group-classes/group-classes.component.html
+++ b/src/app/group-classes/group-classes.component.html
@@ -48,7 +48,8 @@
                         <app-small-calendar (dateSelect)="setDate($event)"></app-small-calendar>
                     </div>
                 </div>
-                <br><br><input type="button" (click)="review = true" value="Next" class="button">
+                <br><br><input type="button" (click)="review = true" value="Next" class="button"
+                    [disabled]="!bookingForm.valid">
             </div>
             <div class="right" *ngIf="review">
                 <h1>Group Classes</h1>
