--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,20 +6,21 @@
   <a href="https://www.tiktok.com/@kiraayogaa"><img src={{tiktokLogo}} height="50px" /></a>
   <app-navbar></app-navbar>
   <div class="home-container">
+    <img src="assets/image3.jpeg" height="540px" class="main-pic" />
+    <div class="main-pic">
+      <img src="assets/image11.jpg" height="380px" class="main-pic" />
+      <div class="right-col">
+        <iframe style="border-radius:12px"
+          src="https://open.spotify.com/embed/playlist/2PsqJurJzWkQ51By9eGVi0?utm_source=generator" width="100%"
+          height="200px" frameBorder="0" allowfullscreen=""
+          allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+      </div>
+    </div>
+    <div class="main-pic">
+      <img src="assets/quote.png" height="130px" class="main-pic" />
+      <img src="assets/image2.jpeg" height="400px" class="main-pic" />
+    </div>
     <img src={{home1}} height="540px" class="main-pic" />
-    <div class="middle-col">
-      <p>&nbsp;{{textContent.intro}}</p>
-      <p>&nbsp;{{textContent.intro2}}</p>
-    </div>
-    <div class="right-col">
-      <iframe width="500" height="282" src="https://www.youtube.com/embed/phuS5VLQy8c" title="YouTube video player"
-        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-        allowfullscreen class="video"></iframe>
-      <iframe style="border-radius:12px"
-        src="https://open.spotify.com/embed/playlist/2PsqJurJzWkQ51By9eGVi0?utm_source=generator" width="100%"
-        height="320" frameBorder="0" allowfullscreen=""
-        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
-    </div>
   </div>
 </div>
 <div *ngFor="let star of starPos; index as i" class="star"
