--- a/src/app/group-classes/group-classes.component.html
+++ b/src/app/group-classes/group-classes.component.html
@@ -3,14 +3,14 @@
     <form id="private-form" [formGroup]="bookingForm" (ngSubmit)="submit()">
         <div class="content">
             <div class="descriptions">
-                <div class="desc-left"><b>Restorative:</b> A style of yoga that focuses on relaxation of the body and
+                <!--<div class="desc-left"><b>Restorative:</b> A style of yoga that focuses on relaxation of the body and
                     mind. Asanas are held for longer, often with the use of props so that your body feels totally
                     supported. Pranayama techniques and meditations will be incorporated throughout. Perfect for any
                     level of experience, and those looking for a meditative, calm practice!</div>
                 <div class="desc-right"><b>Yin:</b> A style of yoga focusing on deep stretches held for a long time,
                     allowing you to go to your edge as we work to find stillness in discomfort. Pranayama techniques and
                     mindfulness will be used to aid us with body awareness and turning inwards. A great practise for any
-                    level of experience and those looking for deep stretches and a mind-body experience</div>
+                    level of experience and those looking for deep stretches and a mind-body experience</div> -->
                 <div class="desc-left"><b>Hatha:</b> A style of yoga where we move through a variety of asanas slowly
                     and intentionally, finding the right alignment for our bodies, often using props for support. Hatha
                     is great for both flexibility and strength. Pranayama is used throughout to help us stay present,
