fix calendar, add email

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,6 +4,7 @@
   </div>
   <a href="https://www.instagram.com/kiraayogaa"><img src={{igLogo}} height="50px" /></a>
   <a href="https://www.tiktok.com/@kiraayogaa"><img src={{tiktokLogo}} height="50px" /></a>
+  <div class="email">KiraaYogaa@gmail.com</div>
   <app-navbar></app-navbar>
   <div class="home-container">
     <img src="assets/image3.jpeg" height="540px" class="main-pic" />
