--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -22,6 +22,10 @@
     z-index: -1;
 }
 
+.email {
+    color: #613613;
+}
+
 @media screen and (max-width: 800px) {
     .home {
         padding: 0 20px;
