--- a/src/app/group-classes/group-classes.component.html
+++ b/src/app/group-classes/group-classes.component.html
@@ -51,19 +51,34 @@
                 <br><br><input type="button" (click)="review = true" value="Next" class="button"
                     [disabled]="!bookingForm.valid">
             </div>
-            <div class="right" *ngIf="review">
+            <div class="right" *ngIf="review && !waiver">
                 <h1>Group Classes</h1>
                 <h2>Review</h2>
                 <div class="review">
                     <div><b>Name:</b> {{bookingForm.value.name}}</div>
                     <div><b>Phone:</b> {{bookingForm.value.phone}}</div>
                     <div><b>Email:</b> {{bookingForm.value.email}}</div><br>
-                    <div><b>Additional Information:</b><br>{{bookingForm.value.additionalInfo}}</div><br>
-                    <div><b>Dates:</b>{{bookingForm.value.date}}</div>
+                    <div *ngIf="bookingForm.value.additionalInfo !== ''"><b>Additional
+                            Information:</b><br>{{bookingForm.value.additionalInfo}}</div><br>
+                    <div><b>Dates:</b>{{bookingForm.value.date}}</div><br>
+                    <div>Please e-transfer your total to kiraayogaa@gmail.com. The meeting link will be sent to you once
+                        payment is received.</div><br>
+                    <a (click)="waiver = true" hidden>Click here to view & sign the waiver</a>
                 </div>
                 <br><br><input type="button" (click)="review = false" value="Back" class="button">
-                <button type="submit" class="button">Submit</button>
+                <button type="submit" class="button" [disabled]="false">Submit</button>
                 <br><br>{{bottomText}}
+            </div>
+            <div class="right waiver-container" *ngIf="waiver">
+                <h1>Group Classes</h1>
+                <h2>Waiver</h2>
+                <div class="waiver">
+                    <p>{{content.waiver1}}</p>
+                    <p>{{content.waiver2}}</p>
+                    <p>{{content.waiver3}}</p>
+                    <p>{{content.waiver4}}</p>
+                    <p>{{content.waiver5}}</p>
+                </div>
             </div>
         </div>
     </form>
