waiver and homepage redesign

--- a/src/app/group-classes/group-classes.component.css
+++ b/src/app/group-classes/group-classes.component.css
@@ -131,9 +131,25 @@ a {
 
 .waiver {
     background-color: white;
-    width: 800px;
+    width: 600px;
     text-align: left;
     padding: 20px;
+    font-family: sans-serif;
+    box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.336);
+}
+
+.submit {
+    width: 800px;
+    margin: 0 auto;
+    text-align: left;
+}
+
+signature-pad {
+    background-color: white;
+}
+
+canvas {
+    background-color: rgb(232, 219, 219);
 }
 
 @media screen and (max-width: 800px) {
@@ -144,5 +160,13 @@ a {
     .form {
         flex-direction: column;
         align-items: center;
+    }
+
+    .waiver {
+        width: 80%;
+    }
+
+    .submit {
+        width: 80%;
     }
 }
