--- a/src/app/small-calendar/small-calendar.component.css
+++ b/src/app/small-calendar/small-calendar.component.css
@@ -55,8 +55,16 @@ button:hover {
     cursor: pointer;
 }
 
+.viewonly {
+    background-color: #ebb3b3;
+}
+
 .available:hover {
     background-color: #d9e2d4;
+}
+
+.viewonly:hover {
+    background-color: #fad2d2;
 }
 
 .selected {
@@ -72,6 +80,7 @@ button:hover {
     text-align: center;
     margin: 0px 20px 20px 20px;
     display: flex;
+    gap: 10px;
     justify-content: space-between;
     align-items: center;
 }
@@ -85,4 +94,17 @@ button:hover {
 
 .select:hover {
     background-color: #cbd9c3;
+}
+
+a {
+    color: black;
+    text-decoration: none;
+    font-size: 0.8rem;
+}
+
+.location {
+    max-width: 100px;
+    font-size: 0.7rem;
+    font-weight: bold;
+    color: #e59494;
 }
