--- a/src/styles.css
+++ b/src/styles.css
@@ -9,7 +9,10 @@ body {
     color: #613613;
 }
 
-input[type="text"] {
+input[type="text"],
+input[type="button"],
+button[type="button"],
+button[type="submit"] {
     font-family: basic;
 }
 
