--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,10 @@
   <a href="https://www.instagram.com/kiraayogaa"><img src={{igLogo}} height="50px" /></a>
   <a href="https://www.tiktok.com/@kiraayogaa"><img src={{tiktokLogo}} height="50px" /></a>
   <div class="email">KiraaYogaa@gmail.com</div>
-  <app-navbar></app-navbar>
+  <div class="nav">
+    <div routerLink="/group-classes" class="nav-option">Group Classes</div>
+    <div routerLink="/about" class="nav-option">About</div>
+  </div>
   <div class="home-container">
     <div>
       <div class="schedule">
@@ -21,20 +24,20 @@
         <img src="assets/Image13.jpeg" height="250px" class="main-pic" />
       </div>
     </div>
-    <div>
+    <div class="spotify-container">
       <img src="assets/image11.jpg" height="380px" class="main-pic" />
       <div class="right-col">
         <iframe style="border-radius:12px"
           src="https://open.spotify.com/embed/playlist/2PsqJurJzWkQ51By9eGVi0?utm_source=generator" width="100%"
-          height="200px" frameBorder="0" allowfullscreen=""
+          height="100%" frameBorder="0" allowfullscreen=""
           allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
       </div>
     </div>
-    <div>
-      <img src="assets/quote.png" height="120px" class="main-pic" />
+    <div class="quote-container">
+      <img src="assets/quote.png" height="120px" class="main-pic quote" />
       <img src="assets/image2.jpeg" height="410px" class="main-pic" />
     </div>
-    <div>
+    <div class="last-container">
       <img src="assets/Image14.jpg" height="265px" class="main-pic" />
       <img src="assets/Image12.jpg" height="265px" class="main-pic" />
     </div>
