--- a/src/app/small-calendar/small-calendar.component.html
+++ b/src/app/small-calendar/small-calendar.component.html
@@ -1,4 +1,4 @@
-<div>Click on green days to see<br>class information</div>
+<div>Click on green and pink days<br>to see class information</div>
 <div class="calendar">
     <div class="header">
         <div class="month">{{monthString(curMonth)}},{{curYear}}</div>
