--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -3,6 +3,8 @@ nav {
     display: flex;
     align-items: center;
     width: 100%;
+    background-color: #f4d6de;
+    margin-top: -8px;
 }
 
 ul {
@@ -12,7 +14,7 @@ ul {
     align-items: center;
     margin: 0;
     width: 100%;
-    gap: 20px;
+    gap: 300px;
     padding: 0px;
 }
 
@@ -29,11 +31,21 @@ a:hover {
 
 li {
     transition: all 100ms ease-in-out;
-    width: 300px;
 }
 
 li:hover {
     transform: scale(1.1);
+}
+
+@media screen and (max-width: 1400px) {
+    li {
+        width: 200px;
+    }
+
+    ul {
+        margin: 0 40px;
+        gap: 100px;
+    }
 }
 
 @media screen and (max-width: 800px) {
@@ -46,6 +58,7 @@ li:hover {
     }
 
     ul {
+        margin: 0;
         gap: 10px;
     }
 }
